Fix: Keep footer at bottom of page in mobile
On firefox mobile the viewport height calculation doesn't include the
url bar and, as such, when it slides out of view the footer doesn't take
the avaible space left. Instead it "floats", it's bottom offset the same
as the height of the url bar. using dvh should fix this.

--- a/src/global.scss
+++ b/src/global.scss
@@ -17,7 +17,6 @@
 }
 
 html {
-  height: 100%;
   background: rgb(57, 29, 54);
   color: white;
   font-family: "Inter", sans-serif;
@@ -25,11 +24,10 @@ html {
 
 body {
   margin: 0;
-  height: 100%;
 }
 
 #root {
-  min-height: 100%;
+  min-height: 100dvh;
   display: flex;
   flex-direction: column;
 }
